k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 

kind: Ingress 

metadata: 

  name: my-ingress

  namespace: prod  

  annotations: 

    nginx.ingress.kubernetes.io/rewrite-target: / 

spec: 

  ingressClassName: nginx 

  rules: 

    - host: a24351515832b4db995e4a9bec16c7cb-54902893.ap-south-1.elb.amazonaws.com  # Replace with your real domain 

      http: 

        paths: 

          - path: / 

            pathType: Prefix 

            backend: 

              service: 

                name: app-service

                port: 

                  number: 80
